--- a/UZOP PROJEKT 2. DIO.ipynb
+++ b/UZOP PROJEKT 2. DIO.ipynb
@@ -70,11 +70,81 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "009d0c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['N', 'L', 'H'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_average['LNH'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4d0a0843",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "N    1450\n",
+       "L     293\n",
+       "H      39\n",
+       "Name: LNH, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_average['LNH'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c95d2be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "N    1450\n",
+       "L     293\n",
+       "Name: LNH, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_average = df_average[df_average['LNH'] != 'H']\n",
+    "df_imputer = df_imputer[df_imputer['LNH'] != 'H']\n",
+    "df_average['LNH'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "39ea26c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "oe = OrdinalEncoder(categories = [['L', 'N', 'H']])\n",
+    "oe = OrdinalEncoder(categories = [['L', 'N']])\n",
     "df_average['LNH'] = oe.fit_transform(df_average[['LNH']])\n",
     "df_imputer['LNH'] = oe.fit_transform(df_imputer[['LNH']])\n",
     "\n",
@@ -85,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0ca663ec",
    "metadata": {},
    "outputs": [],
@@ -117,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8894554a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Točnost: 34.0%'"
+       "'Točnost: 78.6%'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3f5f0224",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Točnost: 36.6%'"
+       "'Točnost: 83.1%'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "46ea657f",
    "metadata": {},
    "outputs": [],
@@ -192,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "df5b4c45",
    "metadata": {},
    "outputs": [
@@ -200,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L: 0.342\n",
-      "N: 0.924\n"
+      "L: 0.471\n",
+      "N: 0.834\n"
      ]
     }
    ],
@@ -224,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "2afb3ef1",
    "metadata": {},
    "outputs": [
@@ -232,8 +302,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L: 0.160\n",
-      "N: 0.358\n"
+      "L: 0.306\n",
+      "N: 0.911\n"
      ]
     }
    ],
@@ -255,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fca95670",
    "metadata": {},
    "outputs": [
@@ -263,8 +333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L: 0.218\n",
-      "N: 0.516\n"
+      "L: 0.371\n",
+      "N: 0.871\n"
      ]
     }
    ],
