--- a/[UZOP] 3.dio projekta, Bukovac i Šklebar.ipynb
+++ b/[UZOP] 3.dio projekta, Bukovac i Šklebar.ipynb
@@ -5,7 +5,7 @@
    "id": "4fb58c58",
    "metadata": {},
    "source": [
-    "## Klasifikacija rođene djece s obzirom na značajke majke\n",
+    "## Klasifikacija težine djece s obzirom na značajke majke\n",
     "##### Child Birth Weight Dataset\n",
     "Zakir Hussain, and Malaya Dutta Borah<br>\n",
     "Department of Computer Science and Engineering, National Institute of Technology Silchar,<br>\n",
